# messaging_api

./: Cargo.toml  README.md  docker-compose.yml
entity/: Cargo.toml  message_room.rs  messages.rs  mod.rs  prelude.rs  rooms.rs  rooms_users.rs  user_room.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240303_211323_creation_users_rooms.rs  m20240318_194802_setting_up_link_between_messages_and_users.rs  m20240321_180038_creating_links_between_messages_and_room.rs  m20240416_204816_create_connection_between_rooms_and_users.rs  m20241001_181625_create_rooms_user_table.rs
src/: main.rs
src/libs/: mod.rs  room_loader.rs  user_loader.rs  uuid_util.rs
src/routes/: messages.rs  mod.rs  rooms.rs  routes.rs  users.rs
src/services/: mod.rs  rooms_service.rs  user_service.rs
