[workspace]
members = [".", "migration"]

[package]
name = "messaging_api"
version = "0.1.0"
edition = "2021"

[dependencies]
migration = { path = "migration" }
actix-web = "4"
cargo-watch = "8.5.2"
log = "0.4.20"
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-time"
]}
sea-orm-migration = "0.12.14"
utc = "0.2.0"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]