[workspace]
members = [".", "migration", "entity"]

[package]
name = "messaging_api"
version = "0.1.0"
edition = "2021"

[dependencies]
migration = { path = "migration" }
entity = { path = "entity" }
actix-web = "4"
cargo-watch = "8.5.2"
log = "0.4.20"
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-time"
]}
sea-orm-migration = "0.12.14"
chrono = "0.4.34"
uuid = { version = "1.7.0", features = [
    "v4"
] }
dotenv = "0.15.0"
