[workspace]
members = [".", "migration", "entity"]

[package]
name = "messaging_api"
version = "0.1.0"
edition = "2021"

[dependencies]
migration = { path = "migration" }
entity = { path = "entity" }
actix-web = "4"
actix-web-lab = "0.20.2"
log = "0.4.20"
sea-orm = { version = "1.0.0", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-time"
]}
sea-orm-migration = "1.0.0"
chrono = "0.4.34"
uuid = { version = "1.8.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
serde_json = "1.0"
dotenv = "0.15.0"
serde = { version = "1.0.204", features = ["derive"] }
